feat(backend): differentiate between validation and transformation errors
